Configs 자동 업데이트